--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,17 +2,53 @@
 
 <head>
   <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="./stylesheets/style.css">
   <style>
     * {
       font-family: 'Masbul', sans-serif;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      padding: 50px;
+      font: 20px "Masbul", "Lucida Grande", Helvetica, Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    a {
+      color: #008384;
+    }
+
+    li {
+      margin-bottom: 12px;
+    }
+
+    content {
+      display: flex;
+      max-width: 560px;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
   </style>
 </head>
 
 <body>
-  <h1 style="font-weight: 700; font-size: 40px; margin-bottom: 12px;">Madams</h1>
-  <span style="font-size: 16px;">Welcome to the Madams</span>
+  <content>
+    <h1 style="font-weight: 700; font-size: 40px; margin-bottom: 12px;">Welcome to The Madams</h1>
+    <p style="font-size: 20px; margin-bottom: 24px; line-height: 32px; font-weight: 500; color: rgba(0,0,0,.72);">This project initiated by <br> Khairani Ummah, the awesome Head of Ops team at Meridian.id</p>
+    <ul>
+      <li><a href="https://github.com/vasilenka/madams-express" target="_blank">Go to GitHub repository</a></li>
+    </ul>
+  </content>
 </body>
 
 </html>
